--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
             <h1 class="heading">THE NAME GAME</h1>
         <button class="button1" onclick="location.href='create_game';">Create Game</button>
         <button class="button1" onclick="location.href='join_game';">Join Game</button>
+        <button class="button2 self-centered" onclick="location.href='readme';">Readme</button>
     </body>
-    <a href="{{ url_for('readme') }}">Readme</a>
 </html>
         
