--- a/templates/readme.html
+++ b/templates/readme.html
@@ -1,5 +1,6 @@
 <head>
-    <style>body {font-family: 'verdana'; background-color: rgb(34, 34, 34); color: white;}</style>
+    <style>body {font-family: consolas, verdana; background-color: rgb(34, 34, 34); color: rgb(200,200,200);}</style>
+    
 </head>
 <body>
 <a href="{{ url_for('homepage') }}">Home</a>
