--- a/templates/graphs.html
+++ b/templates/graphs.html
@@ -23,7 +23,7 @@
   </div>
   <div class="flex-h vmar2">
     {% if game_deets['stage'] < 4 %}
-    <button class="button1" onclick="done()">Return to Game</button>
+    <button class="button1 button3" onclick="done()">Return to Game</button>
     {% else %}
     <h1 class="heading subheading2 pad-10pct">GAME OVER</h1>
     {% endif %}
