--- a/templates/create-game.html
+++ b/templates/create-game.html
@@ -5,18 +5,19 @@
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <title>The Name Game</title>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style2.css') }}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-        <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
-        <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+        <script type="text/javascript" src="{{ url_for('static',filename='react.production.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static',filename='react-dom.production.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static',filename='babel.min.js') }}"></script>
         
     </head>
     <body class="lobby"> 
-        <h1 class="heading subheading">CREATE GAME</h1>
+        <h1 class="heading subheading3">CREATE GAME</h1>
         <form id="form" class="flex-v form pad-10pct" action="{{ url_for('add_game')}}" method="post">
             <div id="app"></div>
             <div class="">
-                <h1 class="heading subheading2">SETTINGS</h1>
+                <h1 class="heading subheading4">SETTINGS</h1>
                 <br>
                 <label for="game_name">Game Name:</label>
                 <input class="input" type="text" id="game_name" name="game_name" placeholder="Insert Name Here" value="" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Insert Name Here'" maxlength="40">
@@ -38,7 +39,7 @@
                 <br>
             </div>
             <div class="">
-                <h1 class="heading subheading2">ROUNDS</h2>
+                <h1 class="heading subheading4">ROUNDS</h2>
                 <br>
                 <div class="flex-h-left margin-v">
                     <label class="switch"><input type="checkbox" id='round1' name="round1" checked=True><span class="slider round"></span></label>
@@ -58,9 +59,9 @@
                 </div>
             </div>
         </form>
-        <div class="flex-h pad-10pct-v">
-            <button class="button1" onclick="submit()">Create Game</button>
-            <button class="button1" onclick="location.href='/';">Home</button>
+        <div class="flex-h py-6 pad-10pct pad">
+            <button class="button1 button3" onclick="submit()">Create Game</button>
+            <button class="button1 button3" onclick="location.href='/';">Home</button>
         </div>
     </body>
     <script type="text/babel">
