--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -8,7 +8,7 @@
         <script src="{{ url_for('static',filename='jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static',filename='socket.io.js') }}"></script>
     </head>
-    <body class="flex-v-start lobby lobby-body"> 
+    <body class="lobby2 flex-v rainbow-gradient-bg animate-rainbow"> 
         <h1 class="heading subheading3">LOBBY</h1>
         <div class="flex-h center vmar">
             <h1 class="heading subheading4 pad-05em">
