--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,13 +6,10 @@
         <title>The Name Game</title>
         <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     </head>
-    <body class="homepage-body flex-v">
-        <video autoplay muted loop>
-            <source src="/static/ennuin_sign_lo.mp4" type="video/mp4" />
-        </video> 
-            <h1 class="heading">THE NAME GAME</h1>
-        <button class="button1" onclick="location.href='create_game';">Create Game</button>
-        <button class="button1" onclick="location.href='join_game';">Join Game</button>
+    <body class="lobby2 flex-v rainbow-gradient-bg animate-rainbow">
+        <h1 class="heading front-page">THE NAME GAME</h1>
+        <button class="button1 button3" onclick="location.href='create_game';">Create Game</button>
+        <button class="button1 button3" onclick="location.href='join_game';">Join Game</button>
         <button class="button2 self-centered" onclick="location.href='readme';">Readme</button>
     </body>
 </html>
