--- a/templates/join-game.html
+++ b/templates/join-game.html
@@ -8,7 +8,7 @@
         <script src="{{ url_for('static',filename='jquery.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static',filename='socket.io.js') }}"></script>
     </head>
-    <body class="lobby"> 
+    <body class="lobby2 flex-v rainbow-gradient-bg animate-rainbow"> 
         <h1 class="heading subheading3">JOIN GAME</h1>
         <div class="flex-v form pad-10pct">
             <div class="flex-v-start"> 
