--- a/static/style.css
+++ b/static/style.css
@@ -9,10 +9,9 @@ body{
     margin: 0; 
     font-family: "poppins" !important ;
     width: 100vw;
-    height: 100vh; 
+    min-height: 100vh; 
     font-size: large;
 }
-.lobby-body{height: auto;}
 .space-between{
     display: flex;
     flex-direction: row;
@@ -46,12 +45,7 @@ body{
 .center{
     justify-content:center;
 }
-.homepage-body{
-    background-image: url("namegamebackground.jpg"); 
-    background-size:cover;
-    background-position: center center;
-    height: 100vh;
-}
+.front-page{font-size: 4ch !important;}
 video {
     width: 100%;
     height: 100%;
@@ -109,11 +103,20 @@ video {
     min-height: 0;
     font-size: 16px;
 }
-.button3:active{
-    transform: scale(0.95);
+button:active{
+    animation: button-press 0.3s linear 1;
+}
+@keyframes button-press{
+    0%{transform: scale(0.95);}
+    50%{transform: scale(1);}
+    100%{transform: scale(0.95);}
 }
 .button-green{
-    background-color:hsl(141, 72%, 42%); 
+    width:240px;
+    height: 80px;
+    font-size: 26px;
+    font-weight: bold;
+    background-color:hsl(141, 76%, 47%); 
 }
 /* .button1:hover,.button2:hover{
     background-color:rgba(30, 30, 30, 0.40); 
@@ -146,6 +149,9 @@ input[type="text"]{
     background-color:rgba(0, 0, 0, 0.35);
     color:white;
 }
+.lobby-text-input{
+    width: 200px;
+}
 input[type="text"]#game_name{
     font-size: 1em;
 }
@@ -154,8 +160,10 @@ input[type="text"]:disabled {background-color:rgba(97, 97, 97, 0.523);}
     color: white;
   }
 input[type="range"]{
-    accent-color: #27877d;
+    accent-color: rgb(255, 255, 255);
 }
+.label1{margin-top: 10px;
+margin-bottom: 0 !important;}
 output{
     margin-left: 1em;
 }
@@ -189,12 +197,12 @@ td strong{    padding: 0.2em 0.5em 0.2em 0.5em;}
     background-color: rgb(73, 255, 237);
     background: linear-gradient(55deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 85%);
     background-repeat: repeat;
-  background-attachment:scroll;
+    background-attachment:scroll;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 @media (min-width: 768px) {
-    .lobby{
+    .lobby, .lobby2{
         width: 768px;
         margin-inline: auto;
     }
@@ -223,18 +231,6 @@ table, th, td, tr {
     font-size:8vw;
     white-space: pre-wrap;
 }
-/* .myturn-background{
-    background: linear-gradient(55deg, rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 180, 0));
-}
-.myteam-background{
-    background: linear-gradient(55deg, rgb(255, 180, 0),rgb(246, 255, 0), rgb(0, 255, 191));
-}
-.notmyteam-background{
-    background: linear-gradient(55deg, rgb(0, 255, 191),rgb(186, 129, 255),rgb(254, 153, 200));
-}
-.a{
-background: linear-gradient(55deg,rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 180, 0),rgb(246, 255, 0), rgb(0, 255, 191),rgb(186, 129, 255),rgb(254, 153, 200));
-} */
 .white{color:rgb(255, 255, 255)}
 .team-players-table{display: block;}
 .team-players-table td{display: inline-block;}
@@ -250,8 +246,9 @@ background: linear-gradient(55deg,rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 
     background-color:rgba(0, 0, 0, 0.55);
     margin-left: 0.6em;
 }
-.write-names-p{font-size:3.2vw ;}
+.write-names-p{font-size: auto ;}
 .self-centered{align-self: center;}
+.no-mar-top{margin-top: 0 !important;}
 
 /*background that took me way too long*/
 .rainbow-gradient-bg{
@@ -290,6 +287,11 @@ background: linear-gradient(55deg,rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 
     0%{background-position: 100% 0%;}
     100%{background-position: 0% 100%;}
 }
+@keyframes animate-not-your-not{
+    0%{background-position: 100% 0%;}
+    50%{background-position: 0% 100%;}
+    100%{background-position: 100% 0%;}
+}
 
 .animate-your-team{
     background-position: 50% 50%;
@@ -316,6 +318,10 @@ background: linear-gradient(55deg,rgb(192, 45, 114), rgb(251, 62, 62), rgb(255, 
 .animate-not-your{
     background-position: 0% 100%;
     animation: animate-not-your 4s ease 1;
+}
+.animate-rainbow{
+    background-position: 0% 100%;
+    animation: animate-not-your-not 25s cubic-bezier(.35,0,.65,1) infinite;
 }
 
 
